# commit_hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml  renovate.json
.github/: tagversion.yml
.github/workflows/: bmp-version.yml  precommit-autoupdate.yml  release-action.yml  tagversion.yml
scripts/: bump_version.sh  bump_version.toml  recreate_changelog.sh
src/commit_hooks/: __init__.py  bump_version.py  changelog.py  check_python_dependencies.py  cz_troi_hook.py  troi_lab_base_hooks.py  utilities.py
src/commit_hooks/templates/configs/: cfg_version_bump.toml  pre-commit-cfg.yaml  pre-commit-cfg_base.yaml  pre-commit-cfg_python.yaml
