[project]
name = "commit_hooks"
version = "0.0.1"
description = "troi-lab commit hooks."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "jinja2>=3.1.6",
    "commitizen>=4.9.1",
    "bump-my-version>=1.2.6",
]
exclude = [
  "**/doc",
  "**/tests", "**/dist",
  "**/images",  "**/_images",
  "**/data",  "**/_data"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
changelog_helper = "commit_hooks.changelog:changelog_helper"
recreate_changelog = "commit_hooks.changelog:recreate_changelog"

[project.entry-points."commitizen.plugin"]
cz_troi_hook = "commit_hooks.cz_troi_hook:TroiCommitizenCz"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.bumpversion]
parse = """
  (?P<major>0|[1-9]\\d*)\\.
  (?P<minor>0|[1-9]\\d*)\\.
  (?P<patch>0|[1-9]\\d*)
  (?:
      -
      (?P<pre_l>[a-zA-Z-]+)
      (?P<pre_n>0|[1-9]\\d*)
  )?
"""
serialize = [
    "{major}.{minor}.{patch}-{pre_l}{pre_n}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "release v{new_version}"
allow_dirty = false
commit = true
message = "chore: bump version: {current_version} -> {new_version}"
commit_args = "--no-verify"

[tool.bumpversion.parts.pre_l]
values = ["dev", "rc", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

# make bash-script executable
# git update-index --chmod=+x scripts/recreate_changelog.sh
