[project]
name = "commit_hooks"
version = "0.0.1"
description = "troi-lab commit hooks."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "jinja2>=3.1.6",
    "commitizen>=4.9.1",
    "bump-my-version>=1.2.6",
    "tomli-w>=1.2.0",
]
exclude = [
  "**/doc",
  "**/tests", "**/dist",
  "**/images",  "**/_images",
  "**/data",  "**/_data"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.scripts]
changelog_helper = "commit_hooks.changelog:changelog_helper"
recreate_changelog = "commit_hooks.changelog:recreate_changelog"
bump_version = "commit_hooks.bump_version:bump_version"

[project.entry-points."commitizen.plugin"]
cz_troi_hook = "commit_hooks.cz_troi_hook:TroiCommitizenCz"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true

# make bash-script executable
# git update-index --chmod=+x scripts/recreate_changelog.sh
